# lowcal

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  tag-pill-preview.html  terminals.example.yaml  vite.config.ts
scripts/: apply-icon-round-corners.py  combine-screenshots-diagonal.py
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: debug-bridge.json  default.json
src-tauri/icons/: icon.icns
src-tauri/shell-integration/: integration.bash  integration.fish  integration.zsh
src-tauri/shell-integration/zdotdir/: .zlogin  .zprofile  .zshenv  .zshrc
src-tauri/src/: app_settings.rs  broadcast_idle.rs  lib.rs  main.rs  window_bounds.rs
src/components/: app-settings-modal.tsx  form-field-hint.tsx  profile-context-menu.tsx  profile-editor-modal.tsx  profile-icons.tsx  quit-confirm-modal.tsx  shell-command-snippet.tsx  tag-context-menu.tsx  tags-field.tsx
src/components/sidebar/: profile-sidebar.tsx  profile-tree.tsx
src/components/terminal/: profile-terminal-session.tsx  terminal-stage-header.tsx  terminal-work-area.tsx
src/components/toolbar/: top-toolbar.tsx
src/constants/: terminal-ui.ts
src/hooks/: use-profiles.ts  use-sidebar-filter.ts  use-terminal-session-glue.ts
src/settings/: global-settings.ts  use-appearance.ts  use-global-settings.ts
src/tauri/: wait-ws-origin.ts
src/types/: profile.ts  ui.ts
src/utils/: cwd-display.ts  delete-profile-dialog.ts  env-lines.ts  errors.ts  profile-form.ts  tag-pills.ts  window-bounds.ts  window-drag.ts  window-snap.ts  ws-encoding.ts
