[package]
name = "terminal-orchestrator"
version = "0.7.0"
description = "Tagged PTY terminal orchestrator"
authors = ["you"]
edition = "2021"
autobins = false
default-run = "LowCal"

[lib]
name = "terminal_orchestrator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "LowCal"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "signal", "fs"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
portable-pty = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
base64 = "0.22"
dirs = "5"
tauri-plugin-dialog = "2"
notify = "6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
